# vibe-kanban-plus

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.omc/sessions/: 818fd824-bcdc-4b9b-b2c7-f9f78b7eb89c.json
.omc/state/: last-tool-error.json
docs/: README.md  部署文档.md
plugins/auth-wall/: Cargo.toml  install.sh  plugin.conf  需求文档.md
plugins/auth-wall/src/: lib.rs  login_page.rs
scripts/: build-with-auth-wall.sh  install.sh
src/: lib.rs  password.rs  session.rs
